<resources>
    <string name="app_name">K224111CASampleProject</string>
    <string name="title_login_username">User Name:</string>
    <string name="title_login_username_hint">Enter your username</string>
    <string name="title_login_password">Password:</string>
    <string name="title_login_save_infor">Save login infor</string>
    <string name="title_login_button_login">Login</string>
    <string name="title_confirm_exit_title">Confirm Exit</string>
    <string name="title_confirm_exit_message">Are you sure want to exit?</string>
    <string name="title_confirm_exit_ok">Yes</string>
    <string name="title_confirm_exit_cancel">Cancel</string>
    <string name="title_customer">Customer\n</string>
    <string name="title_employee">Employee\n</string>
    <string name="title_healthcare">Healthcare\n</string>
    <string name="title_salary">Salary\n</string>
    <string name="title_employeehealthcare">"Employee Healthcare "</string>
    <string name="title_height">Height</string>
    <string name="title_weight">Weight</string>
    <string name="title_calculate">Calculate</string>
    <string name="title_close">Close</string>
    <string name="title_exit">Exit</string>
    <string name="title_results" />


</resources>